# agritech-project

./: .env.example  .gitignore  INTEGRATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.sh  start-backend.bat  start-frontend.bat  verify_planner.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agritech_core/: __init__.py  agents.py  config.py  llm.py  memory.py  rag.py  schemas.py
app/: main.py
backend/: README.md  pyproject.toml
backend/cresco/: config.py  main.py
backend/cresco/agent/: agent.py  prompts.py
backend/cresco/api/: routes.py  schemas.py
backend/cresco/auth/: __init__.py  dependencies.py  jwt.py  routes.py  schemas.py  users.py
backend/cresco/rag/: document_loader.py  indexer.py  retriever.py
backend/data/knowledge_base/: BASF_Disease_Encyclopedia.md  CROPS_standards_2017_V12.md  Characteristics_of_top_performing_farms_in_the_UK_2024-cereals_and_oilseeds.md  Crops-V5-Standards-Aug-22-FINAL.md  ESTA-Standard-Effective-from-1st-June-2020.md  G54_Wheat_disease_management_guide_2012.md  GREE115.md  Microsoft Word - Cereal Crops.docx - Cereal-Crops-Production-Guide-web.md  NutManGuideRB209S1_230526_WEB.md  Tried-Tested-Nutrient-Management-Plan.md  Wheat Growth Guide_2008_UK (1).md  Wheat and barley disease management guide (2024).md  WheatGrowthGuide4470_UPDATE_250627_WEB.md  cereal-seed-contract-2023-24.md  cherry-blossom.md  seed-certification-technical-annex.md  sweet-potatoes.md
backend/scripts/: create_admin.py  drone_image.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_config.py  test_document_loader.py  test_embeddings.py  test_indexer.py  test_main.py  test_prompts.py  test_retriever.py  test_schemas.py
brontend/: index.html  package-lock.json  package.json
brontend/src/: App.jsx  index.css
brontend/src/data/: mockData.js
brontend/src/layout/: ChatArea.jsx  ChatArea.module.css  Header.jsx  Header.module.css  SidebarLeft.jsx  SidebarLeft.module.css  SidebarRight.jsx  SidebarRight.module.css
brontend/src/services/: api.js
data/knowledge_base/: 8.md  BSFP_2024_PDF.md  English-Farming-Update-Spring-2024.pptx.md  HGCA-Grain-Storage-Guide-3rd-Edition-13-October-2011.md  HGCA_Grain_Storage_Guide.md  MSBP-Seed-Conservation-Standards.md  Oat-Growth-Guide.md  Pesticide_Minimisation_-_Cereals.md  agriculture-in-the-uk-2024.md  maize-catalogue-2025.md  pest_management.md  soil-association-a-new-era-for-organic-cereals-2022-download.md  soil_health.md  uk-nutrient-deficiency-pocket-guide-0901.md  uksi_20102605_en.md
docs/: CONTRIBUTING.md  FAIR_REVIEW.md  SETUP.md
docs/archived/: ARCHITECTURE.md  CODEX_REVIEW.md  HANDOFF.md  INDEX.md  ORGANIZATION.md  PROJECT_SPEC.md  README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/sat-area-module/: index.html  package-lock.json  package.json
frontend/sat-area-module/src/: main.jsx  satellite.jsx
frontend/src/: App.jsx  Weather.css  drone_imagery.jsx  satellite.jsx  weather.jsx
frontend/src/data/: mockData.js
scripts/: index_documents.py
src/cresco/: __init__.py  config.py  main.py
tests/: __init__.py  test_api.py  test_orchestrator.py  test_planner_agent.py
(+21 files in other folders)
